--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ find_package(PythonInterp REQUIRED)
 add_custom_command(
 	OUTPUT ${MODERN_GLAD_HEADER}
 	COMMAND ${PYTHON_EXECUTABLE} ${GENERATOR_SCRIPT} ${MODERN_GLAD_HEADER}
+	DEPENDS ${GENERATOR_SCRIPT}
 	COMMENT "Generating ModernGLAD"
 )
 
